[package]
name = "resistor"
version = "0.1.0"
edition = "2021"
description = "Программа для вычисления сопротивления резисторов по цветам"
authors = ["mskrasnov <https://t.me/svalka07>"]
license = "GPL-3.0-or-later"

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
opt-level = 's'

[[bin]]
name = "resistor_cli"

[[bin]]
name = "resistor_gui"

[dependencies]
cursive = "0.20.0"
iced = { version = "0.12.1", features = ["multi-window"] }
sapphire_ui = { git = "https://github.com/mskrasnov/sapphire_ui" }
libmsg = { git = "https://gitlab.com/calmiralinux/libmsg" }
