[package]
name = "resistor-tui"
version = "1.0.0"
edition = "2024"
description = "Program to calculate resistors"
authors = ["Michail Krasnov <mskrasnov07@ya.ru>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/mskrasnov/resistor"
keywords = ["resistor", "calculator"]
categories = ["command-line-utilities", "mathematics"]

[profile.release]
lto = true
strip = true
debug = false
panic = 'abort'
opt-level = 's'

[target.'cfg(unix)'.dependencies]
cursive = "0.20.0"

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.20.0", features = ["crossterm-backend"], default-features = false }
